<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/table_screen_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addNewTableButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:background="@android:color/darker_gray"
            android:onClick="addTable"
            android:text="@string/add_table_button" />

        <Button
            android:id="@+id/addNewItemButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addItem"
            android:text="@string/add_item_button" />

        <Button
            android:id="@+id/nextUpButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@android:color/holo_green_dark"
            android:onClick="viewNextUpScreen"
            android:text="@string/next_up_button" />
    </LinearLayout>

    <ListView
        android:id="@+id/allTablesListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false">

    </ListView>

</LinearLayout>